--- a/package.json
+++ b/package.json
@@ -3,18 +3,67 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "dom-to-image": "2.6.0",
+    "file-saver": "2.0.0",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
-    "react-scripts": "2.1.3"
+    "react-scripts": "2.1.3",
+    "rebass": "3.0.1",
+    "styled-components": "4.1.3"
+  },
+  "devDependencies": {
+    "cross-env": "5.2.0",
+    "eslint-plugin-react": "7.12.4",
+    "eslint-plugin-react-hooks": "1.0.1",
+    "husky": "1.3.1",
+    "lint-staged": "8.1.3",
+    "prettier": "1.16.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "format": "prettier --write \"src/**/*.{js,json}\"",
+    "lint": "eslint src"
+  },
+  "prettier": {
+    "singleQuote": true,
+    "trailingComma": "all"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "cross-env CI=true lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.js": [
+      "prettier --write",
+      "eslint --max-warnings=0",
+      "yarn test --bail --findRelatedTests",
+      "git add"
+    ],
+    "src/**/*.{json}": [
+      "prettier --write",
+      "git add"
+    ]
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "plugin:react/recommended"
+    ],
+    "settings": {
+      "react": {
+        "version": "detect"
+      }
+    },
+    "plugins": [
+      "react-hooks"
+    ],
+    "rules": {
+      "react-hooks/rules-of-hooks": "error"
+    }
   },
   "browserslist": [
     ">0.2%",
