--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "dom-to-image": "2.6.0",
-    "file-saver": "2.0.0",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "react-scripts": "2.1.3",
     "rebass": "3.0.1",
+    "save-svg-as-png": "1.4.8",
     "styled-components": "4.1.3"
   },
   "devDependencies": {
