--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
+    "react-icons": "^3.4.0",
     "react-scripts": "2.1.3",
     "rebass": "3.0.1",
     "save-svg-as-png": "1.4.8",
