--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-scripts": "2.1.3",
     "rebass": "3.0.1",
     "save-svg-as-png": "1.4.8",
-    "styled-components": "4.1.3"
+    "styled-components": "4.1.3",
+    "typeface-oswald": "0.0.54"
   },
   "devDependencies": {
     "cross-env": "5.2.0",
