--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "rebass": "3.0.1",
     "save-svg-as-png": "1.4.8",
     "styled-components": "4.1.3",
-    "typeface-oswald": "0.0.54"
+    "typeface-oswald": "0.0.54",
+    "use-media": "1.2.0"
   },
   "devDependencies": {
     "cross-env": "5.2.0",
