Add Travis configuration.

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "meme",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://st6.io/meme",
   "dependencies": {
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
@@ -27,7 +28,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "format": "prettier --write \"src/**/*.{js,json}\"",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "ci": "yarn lint && cross-env CI=true yarn test --coverage --passWithNoTests"
   },
   "prettier": {
     "singleQuote": true,
