--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "homepage": "https://st6.io/meme",
   "dependencies": {
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0",
-    "react-icons": "^3.4.0",
+    "react": "16.8.4",
+    "react-dom": "16.8.4",
+    "react-icons": "3.5.0",
     "react-scripts": "2.1.3",
     "rebass": "3.0.1",
     "save-svg-as-png": "1.4.8",
@@ -15,10 +15,16 @@
     "use-media": "1.2.0"
   },
   "devDependencies": {
+    "codecov": "3.2.0",
     "cross-env": "5.2.0",
+    "enzyme": "3.9.0",
+    "enzyme-adapter-react-16": "1.11.2",
+    "enzyme-to-json": "3.3.5",
     "eslint-plugin-react": "7.12.4",
     "eslint-plugin-react-hooks": "1.0.1",
     "husky": "1.3.1",
+    "jest-enzyme": "7.0.2",
+    "jest-styled-components": "7.0.0-2",
     "lint-staged": "8.1.3",
     "prettier": "1.16.4"
   },
@@ -29,7 +35,7 @@
     "eject": "react-scripts eject",
     "format": "prettier --write \"src/**/*.{js,json}\"",
     "lint": "eslint src",
-    "ci": "yarn lint && cross-env CI=true yarn test --coverage --passWithNoTests"
+    "ci": "yarn lint && cross-env CI=true yarn test --coverage && yarn codecov"
   },
   "prettier": {
     "singleQuote": true,
@@ -67,6 +73,22 @@
     ],
     "rules": {
       "react-hooks/rules-of-hooks": "error"
+    }
+  },
+  "jest": {
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ],
+    "collectCoverageFrom": [
+      "src/**/*.js"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 100,
+        "functions": 100,
+        "lines": 100,
+        "statements": 100
+      }
     }
   },
   "browserslist": [
