--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "react": "16.8.4",
     "react-dom": "16.8.4",
     "react-icons": "3.5.0",
-    "react-scripts": "2.1.3",
+    "react-scripts": "2.1.8",
     "rebass": "3.0.1",
     "save-svg-as-png": "1.4.8",
     "styled-components": "4.1.3",
@@ -21,7 +21,7 @@
     "enzyme-adapter-react-16": "1.11.2",
     "enzyme-to-json": "3.3.5",
     "eslint-plugin-react": "7.12.4",
-    "eslint-plugin-react-hooks": "1.0.1",
+    "eslint-plugin-react-hooks": "1.6.0",
     "husky": "1.3.1",
     "jest-enzyme": "7.0.2",
     "jest-styled-components": "7.0.0-2",
@@ -72,7 +72,8 @@
       "react-hooks"
     ],
     "rules": {
-      "react-hooks/rules-of-hooks": "error"
+      "react-hooks/rules-of-hooks": "error",
+      "react-hooks/exhaustive-deps": "error"
     }
   },
   "jest": {
