--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "homepage": "https://st6.io/meme",
   "dependencies": {
-    "react": "16.8.4",
-    "react-dom": "16.8.4",
+    "react": "16.8.6",
+    "react-dom": "16.8.6",
     "react-icons": "3.5.0",
-    "react-scripts": "2.1.8",
+    "react-scripts": "3.0.0",
     "rebass": "3.0.1",
     "save-svg-as-png": "1.4.8",
     "styled-components": "4.1.3",
@@ -15,25 +15,24 @@
     "use-media": "1.2.0"
   },
   "devDependencies": {
+    "@types/jest": "24.0.12",
     "codecov": "3.2.0",
     "cross-env": "5.2.0",
     "enzyme": "3.9.0",
-    "enzyme-adapter-react-16": "1.11.2",
+    "enzyme-adapter-react-16": "1.12.1",
     "enzyme-to-json": "3.3.5",
-    "eslint-plugin-react": "7.12.4",
-    "eslint-plugin-react-hooks": "1.6.0",
-    "husky": "1.3.1",
+    "husky": "2.1.0",
     "jest-enzyme": "7.0.2",
     "jest-styled-components": "7.0.0-2",
     "lint-staged": "8.1.3",
-    "prettier": "1.16.4"
+    "prettier": "1.17.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "format": "prettier --write \"src/**/*.{js,json}\"",
+    "format": "prettier --write \"src/**/*.{js,json}\" *.md",
     "lint": "eslint src",
     "ci": "yarn lint && cross-env CI=true yarn test --coverage && yarn codecov"
   },
@@ -56,25 +55,17 @@
     "src/**/*.{json}": [
       "prettier --write",
       "git add"
+    ],
+    "*.md": [
+      "prettier --write",
+      "git add"
     ]
   },
   "eslintConfig": {
     "extends": [
       "react-app",
       "plugin:react/recommended"
-    ],
-    "settings": {
-      "react": {
-        "version": "detect"
-      }
-    },
-    "plugins": [
-      "react-hooks"
-    ],
-    "rules": {
-      "react-hooks/rules-of-hooks": "error",
-      "react-hooks/exhaustive-deps": "error"
-    }
+    ]
   },
   "jest": {
     "snapshotSerializers": [
@@ -92,10 +83,16 @@
       }
     }
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
