--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "react-icons": "3.5.0",
     "react-scripts": "3.0.0",
     "rebass": "3.0.1",
-    "save-svg-as-png": "1.4.8",
+    "save-svg-as-png": "st6io/saveSvgAsPng#meme-fixes",
     "styled-components": "4.1.3",
     "typeface-oswald": "0.0.54",
     "use-media": "1.2.0"
