Generate Meme from URL
Add generating meme from URL functionality.

There are two key points here.
1. We use 'is-image-url' to check if the passed url is image
which might lead to sync request to the url to check if the
response 'content-type' header is image.
2. Since CORS might not be enabled for the url of the image
we bypass it by sending the image's url to our backend endpoint
which proxies the image request.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "homepage": "https://st6.io/meme",
   "dependencies": {
+    "is-image-url": "1.1.8",
     "react": "16.8.6",
+    "react-addons-css-transition-group": "15.6.2",
     "react-dom": "16.8.6",
     "react-icons": "3.5.0",
     "react-scripts": "3.0.0",
