--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "homepage": "https://st6.io/meme",
   "dependencies": {
-    "is-image-url": "1.1.8",
+    "is-image": "3.0.0",
     "react": "16.8.6",
     "react-addons-css-transition-group": "15.6.2",
     "react-dom": "16.8.6",
@@ -14,6 +14,7 @@
     "save-svg-as-png": "st6io/saveSvgAsPng#meme-fixes",
     "styled-components": "4.1.3",
     "typeface-oswald": "0.0.54",
+    "url": "0.11.0",
     "use-media": "1.2.0"
   },
   "devDependencies": {
